Fix text alignment.

--- a/stylesheets/mainStyle.css
+++ b/stylesheets/mainStyle.css
@@ -1,6 +1,6 @@
 body {
 	background-color: #333;
-	color: #bbb;
+	color: #aaa;
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
 }
@@ -16,6 +16,10 @@ a:active, a:hover, a:visited, a:link {
 
 a:hover {
 	opacity: 0.7;
+}
+
+td a:hover {
+	opacity: 1.0;
 }
 
 h1 {
@@ -112,6 +116,16 @@ header {
 
 .posts, .post {
 	text-align: left;
+}
+
+.exp {
+	text-align: left;
+	padding-left: 20%;
+	padding-right: 20%;
+}
+
+.exp ul {
+	text-align: center;
 }
 
 i.fa {
